# registry_viewer

./: .gitignore  Makefile  README.md  command_help.txt  command_runner.py  db_dump.bat.sample  pyproject.toml
api/: serializers.py  urls.py  views.py
app/: my_backend.py  settings.py  settings_for_db_dump.py  settings_for_registry_auto_parse.py  urls.py
authapp/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
authapp/templates/authapp/: base.html  login.html  (+6 more)
docx_generator/: services.py  urls.py  views.py
mainapp/: admin.py  allowed_apps_middleware.py  context_processors.py  custom_loggers.py  dto.py  logger.py  models.py  registry_basic_dto.py  services.py  services_for_registry_auto_parse.py  tests.py  urls.py  views.py
mainapp/fixtures/: event_type_codes.json
mainapp/services/: get_file_choice.py
mainapp/templatetags/: my_custom_filters.py
metricsapp/: forms.py  models.py  urls.py  views.py
registry_br/: admin.py  apps.py  models.py  urls.py  views.py
registry_id/: admin.py  apps.py  models.py  urls.py  views.py
registry_lrp/: admin.py  apps.py  dto.py  models.py  serializers.py  urls.py  views.py
registry_lrp/tests/: RegistryLRPDTOTest.py
registry_lrp_dop/: admin.py  apps.py  models.py  urls.py  views.py
registry_rtn_ts/: admin.py  apps.py  models.py  urls.py  views.py
registry_state_support/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
registry_zp/: admin.py  apps.py  models.py  urls.py  views.py
searchapp/: urls.py  views.py
statisticapp/: admin.py  choices.py  models.py  services.py
(+63 files in other folders)
